plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok:1.18.28' // 최신 Lombok 버전 추가
	annotationProcessor 'org.projectlombok:lombok:1.18.28' // Lombok annotation processor 추가
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.compilerArgs += ['--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17) // 17 또는 11로 변경
	}
}
